[metadata]
name = bricks
summary = Coordinate deployment of dockerstack configurations 
description-file =
    README.rst
author = Cloud A 
author-email = info@clouda.ca 
home-page = https://www.clouda.ca 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    bricks

[entry_points]
console_scripts =
    bricks-api = bricks.cmd.api:main
    bricks-dbsync = bricks.cmd.dbsync:main
    bricks-conductor = bricks.cmd.conductor:main
    bricks-rootwrap = oslo.rootwrap.cmd:main


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = bricks/locale
domain = bricks

[update_catalog]
domain = bricks
output_dir = bricks/locale
input_file = bricks/locale/bricks.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bricks/locale/bricks.pot

[wheel]
univeral = 1
